[package]
name = "evolution_sim_rewrite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = "debuginfo"
lto = true

[dependencies]
rand = "0.8.5"
custom_dst = { git = "https://github.com/JarlEvanson/custom_dst.git" }
